Finish login and logout

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -163,3 +163,12 @@
    margin-top: 50px;
  }
 
+/* logout */
+
+ #logout{
+   cursor: default;
+   &:hover{
+     background-color: transparent;
+   }
+ }
+
