--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5849,4 +5849,10 @@ input {
 .panel {
   margin-top: 50px; }
 
+/* logout */
+#logout {
+  cursor: default; }
+  #logout:hover {
+    background-color: transparent; }
+
 /*# sourceMappingURL=app.css.map */
